src/app/app.component.scss
:host *::selection {
    background-color: none;
}

.calendar-container {
    display: flex;
    transform: scale(1);
    flex-direction: column;
    color: var(--dark-grey);
    font-family: 'Montserrat', sans-serif;
    box-shadow: 0px 0px 12px 12px #dddddd,
}

.calendar-header-wrapper {
    display: flex;
    color: white;
    flex-direction: column;
    background-color: var(--highlight);
}

.day,
.month,
.date,
.year,
.time {
    width: 100%;
    font-weight: 600;
    text-align: center;
    background-color: var(--highlight);
    >span {
        cursor: pointer;
    }
}

.day {
    padding: 10px 0;
    font-size: 15px;
    line-height: 15px;
    position: relative;
    background-color: var(--dark-highlight);
}

.month {
    font-size: 28px;
    line-height: 28px;
    padding-top: 28px;
}

.date {
    padding: 15px 0;
    font-size: 60px;
    line-height: 60px;
}

.year {
    padding: 5px 0;
    font-size: 25px;
    line-height: 25px;
    font-weight: 500;
    //   padding-bottom: 25px;
    //   color: var(--light-highlight);
}

.time {
    font-size: 25px;
    line-height: 25px;
    font-weight: 100;
    padding: 20px 0;
    color: var(--light-highlight);
}

.calendar-meridiem {
    font-size: 15px;
    padding: 0;
    margin: 0;
    line-height: 15px;
}

.btn-calendar-close {
    content: 'x';
    right: 0;
    position: absolute;
    padding-right: 10px;
}

.selceted-month-year {
    cursor: pointer;
    margin: 0 auto;
}

.calendar-controls-wrapper {
    display: flex;
    padding: 10px;
    font-size: 16px;
    font-weight: 500;
    line-height: 20px;
    background-color: white;
    justify-content: space-between;
}

.btn-control-wrapper {
    display: flex;
    align-items: center;
}

.btn-control {
    width: 15px;
    height: 15px;
    display: block;
    color: white;
    font-size: 20px;
    line-height: 15px;
    text-align: center;
    border-radius: 50%;
    cursor: pointer;
    background-color: var(--dark-grey);
}

.previous {
    transform: rotate(180deg);
}

.tbl-calendar {
    padding: 10px;
    color: var(--dark-grey);
    background-color: white;
    border-radius: 5px;
    .td-calendar {
        padding: 10px;
        cursor: pointer;
        text-align: center;
        vertical-align: middle;
        &:hover {
            //   color: white;
            //   border-radius: 50%;
            //   background-color: var(--highlight);
            text-decoration: underline;
        }
    }
    .td-calendar-selected {
        color: white;
        border-radius: 50%;
        background-color: var(--highlight);
    }
    .td-calendar-empty {
        &:hover {
            cursor: auto;
            background-color: transparent;
        }
    }
    .td-calendar-days {
        cursor: default;
        text-align: center;
        vertical-align: middle;
        color: var(--highlight);
    }
}

.calendar-selection-controls-wrapper {
    display: grid;
    padding: 10px;
    align-items: center;
    text-align: center;
    grid-template-columns: repeat(3, 1fr);
    >.calendar-selection-control {
        &:nth-child(1) {
            text-align: left;
        }
        &:nth-child(3) {
            text-align: right;
        }
        >span {
            cursor: pointer;
            color: var(--highlight);
            &:hover {
                text-decoration: underline;
            }
        }
    }
}

.calendar-control-main-container {
    position: relative;
    >.calendar-overlay-wrapper {
        position: absolute;
        width: calc(100% - 20px);
        height: 100%;
        top: 0;
        left: 0;
        background: white;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        padding: 0 10px;
        >.month-selection,
        .year-selection {
            display: flex;
            justify-content: center;
            width: calc(100% / 3 - 20px);
            height: 40px;
            align-items: center;
            padding: 10px;
            text-align: center;
            cursor: pointer;
            &:hover {
                background: var(--highlight);
                color: white;
            }
        }
        >.month-selected,
        .year-selected {
            background: var(--highlight);
            color: white;
        }
    }
}

.time-main-container {
    width: 100%;
    padding: 10px;
    padding-top: 0;
    >.hour-format-tabs-wrapper {
        width: 100%;
        display: flex;
        cursor: pointer;
        text-align: center;
        justify-content: space-evenly;
        >.hour-format-tab {
            width: 100%;
            padding: 5px 0;
            border: 1px solid var(--highlight);
            &:hover {
                color: white;
                background: var(--light-highlight);
            }
        }
        >.hour-format-tab-selected {
            color: white;
            background: var(--highlight);
        }
    }
    >.time-container {
        width: 100%;
        height: calc(100% - 30px);
        display: flex;
        flex-direction: column;
        >.time-controls-wrapper {
            height: 100%;
            padding: 0 10px;
            padding-bottom: 5px;
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            >.time-hours-rotator-wrapper,
            .time-minutes-rotator-wrapper,
            .time-seconds-rotator-wrapper {
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;
                >.time-rotator-title {
                    font-size: 12px;
                    padding-top: 5px;
                    color: var(--highlight);
                }
                >.btn-time-rotator {
                    cursor: pointer;
                    font-size: 20px;
                    line-height: 15px;
                    padding: 0;
                    margin: 0;
                    color: var(--dark-highlight);
                }
                >.time-controls-stage {
                    >.time-controls-rotator {
                        >.time-control {
                            width: 30px;
                            padding: 10px;
                            margin: 5px 0;
                            // font-size: 25px;
                            // font-weight: 600;
                            text-align: center;
                            color: var(--highlight);
                            border: 1px solid var(--light-highlight);
                            // background: var(--light-highlight);
                            &:nth-child(1) {
                                margin-top: 0;
                            }
                            &:nth-child(2) {
                                background: var(--highlight);
                                color: white;
                            }
                            &:nth-child(3) {
                                margin-bottom: 0;
                            }
                            &:nth-child(n+4) {
                                display: none;
                            }
                            &:hover {
                                cursor: pointer;
                                color: white;
                                background: var(--light-highlight);
                            }
                        }
                    }
                }
            }
            >.time-separator {
                justify-self: center;
                align-self: center;
                font-weight: 600;
                font-size: 24px;
                margin-top: 15px;
                color: var(--highlight);
            }
            >.time-meridiem-wrapper {
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;
                >.time-meridiem {
                    width: 50px;
                    height: 50px;
                    cursor: pointer;
                    color: var(--highlight);
                    background-color: white;
                    border: 1px solid var(--highlight);
                    text-align: center;
                    line-height: 50px;
                    &:hover {
                        background: var(--light-highlight);
                        color: white;
                    }
                    &:nth-child(1) {
                        margin-top: 20px;
                        margin-bottom: 10px;
                    }
                    &::nth-child(2) {
                        margin-top: 10px;
                    }
                    &-active {
                        background: var(--highlight);
                        color: white;
                    }
                }
            }
        }
    }
}

select {
    background: white;
    padding: 5px;
    border: 1px solid var(--light-highlight);
    -webkit-appearance: none;
    -moz-appearance: none;
    -o-appearance: none;
}

